# trmnl_barneskole_arbeidsplaner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: index.html
docs/minde/: manifest.json  trinn-1.json  trinn-2.json  trinn-3.json  trinn-4.json  trinn-5.json  trinn-6.json  trinn-7.json
plugin/: .trmnlp.yml
plugin/src/: full.liquid  half_horizontal.liquid  quadrant.liquid  settings.yml  shared.liquid
schools/: alvoen.yml  minde.yml  nordnes.yml
scraper/: build.py  devices.py  render.py  school_config.py  scrape.py
